add v-stepper component and customize its styles

--- a/src/styles/hero-scheduling.scss
+++ b/src/styles/hero-scheduling.scss
@@ -6,4 +6,8 @@
     &__steps {
         flex-grow: 1;
     }
+
+    @media (max-width: $bp-max-mobile-landscape) {
+        flex-direction: column;
+    }
 }
