--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,7 @@
 @import "next-steps";
 @import "page";
 @import "playhero-vcalendar";
+@import "playhero-v-stepper";
 @import "primary-button";
 @import "profile-details";
 @import "promo-media";
