--- a/src/styles/compact-profile-details.scss
+++ b/src/styles/compact-profile-details.scss
@@ -6,58 +6,85 @@
 */
 
 .compact-profile-details {
-    padding: 48px;
+  padding: 48px;
+
+  &__avatar {
+    width: 165px;
+    height: 420px; // equals to purchase-box's height on Hero Profile page
+    border-radius: 10px;
+    overflow: hidden;
+    flex-shrink: 0;
+    margin-top: 24px;
+  }
+
+  &__avatar-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__name {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 19px;
+      color: #2B2B2B;
+  }
+
+  &__tag {
+    margin-right: 12px;
+    margin-top: 8px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &--green {
+      padding: 4px 8px;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
+      background: #1EA26B;
+      border-radius: 5px;
+      color: #fff;
+    }
+
+    &--transparent {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 19px;
+      color: #ACACAC;
+    }
+  }
+
+  &__tag-list {
+    display: flex;
+    align-items: center;
+  }
+
+  @media (max-width: $bp-max-mobile-landscape) {
+    border-radius: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 
     &__avatar {
-      width: 165px;
-      height: 420px; // equals to purchase-box's height on Hero Profile page
-      border-radius: 10px;
-      overflow: hidden;
-      flex-shrink: 0;
-      margin-top: 24px;
-    }
-  
-    &__avatar-image {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: 265px;
+      margin-top: 0;
+      order: 1;
     }
 
     &__name {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        color: #2B2B2B;
+      order: 2;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 28px;
+      color: #2B2B2B;
+      margin-top: 24px;
     }
 
-    &__tag {
-      margin-right: 12px;
-      margin-top: 8px;
-
-      &:last-child {
-        margin-right: 0;
-      }
-  
-      &--green {
-        padding: 4px 8px;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 14px;
-        background: #1EA26B;
-        border-radius: 5px;
-        color: #fff;
-      }
-  
-      &--transparent {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        color: #ACACAC;
-      }
-    }
-  
     &__tag-list {
-      display: flex;
-      align-items: center;
+      order: 3;
     }
+  }
 }
