--- a/src/styles/account-menu.scss
+++ b/src/styles/account-menu.scss
@@ -1,3 +1,5 @@
+@import "_utils/breakpoints";
+
 .account-menu {
     display: flex;
     margin-bottom: 24px;
@@ -10,12 +12,13 @@
     }
 
     &__main-link {
+        --main-link-color: #2B2B2B;
         @include uads-a(
-            $color: #2B2B2B,
-            $color--active: #2B2B2B,
-            $color--active-link: #2B2B2B,
-            $color--active-visited: #2B2B2B,
-            $color--visited: #2B2B2B,
+            $color: var(--main-link-color),
+            $color--active: var(--main-link-color),
+            $color--active-link: var(--main-link-color),
+            $color--active-visited: var(--main-link-color),
+            $color--visited: var(--main-link-color),
             $cursor: pointer,
             $outline-color--active-link: currentColor,
             $outline-style--active-link: none,
@@ -35,6 +38,7 @@
         font-size: 12px;
         line-height: 14px;
         padding: 12px 41px;
+        display: block;
 
         &--active {
             background: #FFFFFF;
@@ -57,5 +61,17 @@
           $padding-top: 0
         );
         align-items: center;
+    }
+
+    @media (max-width: $bp-max-mobile-landscape) {
+
+        &__main-link {
+            padding: 12px 16px;
+
+            &--active {
+                --main-link-color: #fff;
+                background: #EB922F;
+            }
+        }
     }
 }
