add User Account Sessions Purchased layout and styles; remove deprecated scheduling-steps styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,7 +34,7 @@
 @import "purchase-box";
 @import "purchase-cta";
 @import "purchase-note";
-@import "scheduling-steps";
+@import "purchased-session-message";
 @import "secondary-button";
 @import "select-field";
 @import "selected-game";
