add User Account Sessions Confirmed Propose Change layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,7 @@
 @import "selected-game";
 @import "session-list";
 @import "session-message";
+@import "session-scheduler";
 @import "single-boxed-section";
 @import "social-link-list";
 @import "time-slot-list";
