--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -31,6 +31,7 @@
   $line-height: 19px;
   
   width: 100%;
+  max-width: 300px;
 
   @each $view-name, $view-style in $button-views {
     &--#{$view-name} {
