--- a/src/styles/time-slot-list.scss
+++ b/src/styles/time-slot-list.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     max-width: 300px;
 
+    &__actions-hint {
+        margin-top: 24px;
+    }
+
     &__additional {
         margin: 16px 0 24px;
     }
