--- a/src/styles/primary-button.scss
+++ b/src/styles/primary-button.scss
@@ -13,12 +13,21 @@
       "border-color": #EB922F,
       "border-color--disabled": #ACACAC,
       "text-color": #ffffff,
+      "text-color--disabled": #ACACAC,
     ),
     "stroked": (
       "background-color": transparent,
       "border-color": #EB922F,
       "border-color--disabled": #ACACAC,
       "text-color": #EB922F,
+      "text-color--disabled": #ACACAC,
+    ),
+    "stroked-danger": (
+      "background-color": transparent,
+      "border-color": #CE3434,
+      "border-color--disabled": #ACACAC,
+      "text-color": #CE3434,
+      "text-color--disabled": #ACACAC,
     )
   );
   $display: inline-block;
@@ -84,7 +93,7 @@
           $box-sizing: border-box,
           $color: map-get($view-style, "text-color"),
           $color--active: map-get($view-style, "text-color"),
-          $color--disabled: #ACACAC,
+          $color--disabled: map-get($view-style, "text-color--disabled"),
           $cursor: default,
           $display: $display,
           $font-family: inherit,
