add Hero Account Availability layout and styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "global";
 
 @import "account-menu";
+@import "availability-settings";
 @import "auth-button-list";
 @import "book-session-form";
 @import "boxed-sections";
@@ -46,3 +47,4 @@
 @import "time-slot-list";
 @import "toggle-switcher";
 @import "toolbar-menu";
+@import "weekday-slot-list";
