add Hero Account Availability Empty layout

--- a/src/styles/availability-settings.scss
+++ b/src/styles/availability-settings.scss
@@ -11,6 +11,11 @@
         &:last-child {
             margin-bottom: 0;
         }
+
+        &--inactive {
+            opacity: 0.5;
+            pointer-events: none;
+        }
     }
 
     &__week {
