add account-entry component for Hero pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import "global";
 
+@import "account-entry";
 @import "account-menu";
 @import "availability-settings";
 @import "auth-button-list";
